Fix start cleaning button
Related to #3

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/rizz360/appdaemon_custom_widgets/issues/3?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/custom_widgets/basevacuum/basevacuum.html
+++ b/custom_widgets/basevacuum/basevacuum.html
@@ -4,7 +4,5 @@
     <div id="room_list">
         
     </div>
-    <!--
-    <div class="start-clean">Start Cleaning</div>
-    -->
+    <div class="start-clean">Start [NAME OF BOT]</div>
 </div>
