--- a/custom_widgets/basevacuum/basevacuum.html
+++ b/custom_widgets/basevacuum/basevacuum.html
@@ -1,6 +1,6 @@
 <link
-  href="https://fonts.googleapis.com/icon?family=Material+Icons"
   rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css"
 />
 
 <div class="vacuum-widget">
